erDiagram
    ORGANIZATION ||--o{ WORKSPACE : "contains"
    ORGANIZATION ||--o{ BILLING : "manages"
    ORGANIZATION ||--o{ SUBSCRIPTION : "defines"
    WORKSPACE ||--o{ MEMBER : "employs"
    WORKSPACE ||--o{ PROJECT : "organizes"
    MEMBER }|--|| ROLE : "assigned"
    PROJECT ||--o{ REPOSITORY : "links"
    PROJECT ||--o{ FEATURE_REQUEST : "tracks"
    FEATURE_REQUEST ||--o{ CLARIFICATION_QUESTION : "prompts"
    CLARIFICATION_QUESTION ||--o| CLARIFICATION_ANSWER : "receives"
    FEATURE_REQUEST ||--o| PRD : "defines"
    PRD ||--o{ TASK : "generates"
    TASK ||--o| PULL_REQUEST : "develops"
    PULL_REQUEST ||--o{ REVIEW : "undergoes"
    REVIEW ||--o{ REVIEW_ISSUE : "flags"
    PULL_REQUEST ||--o| APPROVAL : "requires"
    PROJECT ||--o{ RELEASE : "deploys"
    WORKSPACE ||--o{ AUDIT_LOG : "tracks"
    WORKSPACE ||--o{ USAGE : "measures"
    WORKSPACE ||--o{ CREDIT : "balance"
    WORKSPACE ||--o{ AI_CONVERSATION : "logs"
    WORKSPACE ||--o{ WEBHOOK_EVENT : "captures"
    MEMBER ||--o{ NOTIFICATION : "receives"
